[metadata]
name = packit-service
url = https://github.com/packit-service/packit-service
description = A service to integrate upstream open source projects into Fedora operating system.
long_description = file: README.md
long_description_content_type = text/markdown
author = Red Hat
author_email = user-cont-team@redhat.com
license = MIT
license_file = LICENSE
classifiers =
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3.7
    Topic :: Software Development
keywords =
    git
    packaging
    fedora
    rpm
    dist-git
    packit


[options]
packages = find:
python_requires = >=3.7
include_package_data = True

setup_requires =
    setuptools_scm
    setuptools_scm_git_archive

# This repo contains 2 components (with separate container images): web service and celery worker
# Here are only those deps that are required by both, so that each image doesn't pull everything.
# The others are in files/install-deps*.yaml
install_requires =
    celery[redis]
    marshmallow~=2.0

[options.packages.find]
exclude =
    tests*

[options.extras_require]
testing =
    pytest
