[metadata]
name = packit_service
description = A service to integrate upstream open source projects into Fedora operating system.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/packit/packit-service
author = Red Hat
author_email = user-cont-team@redhat.com
license = MIT
license_file = LICENSE
classifiers =
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Software Development
keywords =
    git
    packaging
    fedora
    rpm
    dist-git
    packit

[options]
packages = find:
# This repo contains 2 components (with separate container images): web service and celery worker
# Here are only those deps that are required by both, so that each image doesn't pull everything.
# The others are in files/install-deps*.yaml
install_requires =
    # 4.4.4 was broken, stick to what works
    celery[redis,sqs]==4.4.2
    lazy_object_proxy
python_requires = >=3.7
include_package_data = True
setup_requires =
    setuptools_scm
    setuptools_scm_git_archive

[options.extras_require]
testing =
    pytest

[options.packages.find]
exclude =
    tests*
